platform/policy/kyverno/tests/probes-require-startup-probe/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: kyverno-probes-startup
  labels:
    infra.k8/tier: staging
